experimental/ast/testdata/parser/package/eof_after_kw.proto.stderr
error: missing package name
  --> testdata/parser/package/eof_after_kw.proto:17:1
   | 
17 | package
   | ^^^^^^^ help: add a path after `package`

encountered 1 error
